Create simple html by view

--- a/src/app/ri-user/ri-user-login/ri-user-login.component.html
+++ b/src/app/ri-user/ri-user-login/ri-user-login.component.html
@@ -1,3 +1,16 @@
-<p>
-  ri-user-login works!
-</p>
+<md-card>
+  <md-card-title>User Login</md-card-title>
+    <md-card-content>
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Login" />
+      </md-input-container>
+      <br>
+      <md-input-container class="full-width">
+        <input mdInput type="password" placeholder="Password" />
+      </md-input-container>
+      <br>
+    </md-card-content>
+    <md-card-actions>
+      <button md-button>Sign up</button>
+    </md-card-actions>
+</md-card>
