--- a/src/app/ri-user/ri-user-logoff/ri-user-logoff.component.html
+++ b/src/app/ri-user/ri-user-logoff/ri-user-logoff.component.html
@@ -1,3 +1,6 @@
-<p>
-  ri-user-logoff works!
-</p>
+<md-card>
+  <md-card-title>User Logoff</md-card-title>
+    <md-card-actions>
+      <button md-button>Sign down</button>
+    </md-card-actions>
+</md-card>
