--- a/src/app/ri-user/ri-user-registration/ri-user-registration.component.html
+++ b/src/app/ri-user/ri-user-registration/ri-user-registration.component.html
@@ -1,1 +1,19 @@
-<md-card>User Registration</md-card>
+<md-card>
+  <md-card-title>User Registration</md-card-title>
+    <md-card-content>
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Login" />
+      </md-input-container>
+      <br>
+      <md-input-container class="full-width">
+        <input mdInput type="password" placeholder="Password" />
+      </md-input-container>
+      <br>
+      <md-input-container class="full-width">
+        <input mdInput type="password" placeholder="Retype password" />
+      </md-input-container>
+    </md-card-content>
+    <md-card-actions>
+      <button md-button>Sign up</button>
+    </md-card-actions>
+</md-card>
