--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
+<md-toolbar color="primary">
+    <button md-button [mdMenuTriggerFor]="menu">
+        <md-icon>menu</md-icon>
+    </button>
+    <md-menu #menu="mdMenu">
+        <button md-menu-item routerLink="/login">Login</button>
+        <button md-menu-item routerLink="/registration">Registration</button>
+        <button md-menu-item routerLink="/logoff">Logoff</button>
+        <button md-menu-item routerLink="/list">User List</button>
+    </md-menu>
+    RiUser
+</md-toolbar>
 <router-outlet></router-outlet>
-
