--- a/src/app/ri-user/ri-user-list/ri-user-list.component.html
+++ b/src/app/ri-user/ri-user-list/ri-user-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  ri-user-list works!
-</p>
+<md-card>
+  <md-card-title>User List</md-card-title>
+  <md-card-content>
+      <md-nav-list>
+        <md-list-item *ngFor="let user of users">
+        </md-list-item>  
+      </md-nav-list>  
+  </md-card-content>
+</md-card>
